Refactor: staff creation refactor
